Task Creation and priorities/build/log/idf_py_stdout_output_29152
[1/10] Performing build step for 'bootloader'
[1/1] cmd.exe /C "cd /D C:\Users\alok2\OneDrive\Desktop\IOT\Counting\Counting\build\bootloader\esp-idf\esptool_py && C:\Espressif\python_env\idf5.0_py3.11_env\Scripts\python.exe C:/Espressif/frameworks/esp-idf-v5.0.3/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 C:/Users/alok2/OneDrive/Desktop/IOT/Counting/Counting/build/bootloader/bootloader.bin"
Bootloader binary size 0x6610 bytes. 0x9f0 bytes (9%) free.
[2/8] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj 
ccache C:\Espressif\tools\xtensa-esp32-elf\esp-2022r1-11.2.0\xtensa-esp32-elf\bin\xtensa-esp32-elf-gcc.exe -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -IC:/Users/alok2/OneDrive/Desktop/IOT/Counting/Counting/build/config -IC:/Users/alok2/OneDrive/Desktop/IOT/Counting/Counting/main -IC:/Espressif/frameworks/esp-idf-v5.0.3/components/newlib/platform_include -IC:/Espressif/frameworks/esp-idf-v5.0.3/components/freertos/FreeRTOS-Kernel/include -IC:/Espressif/frameworks/esp-idf-v5.0.3/components/freertos/esp_additions/include/freertos -IC:/Espressif/frameworks/esp-idf-v5.0.3/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -IC:/Espressif/frameworks/esp-idf-v5.0.3/components/freertos/esp_additions/include -IC:/Espressif/frameworks/esp-idf-v5.0.3/components/esp_hw_support/include -IC:/Espressif/frameworks/esp-idf-v5.0.3/components/esp_hw_support/include/soc -IC:/Espressif/frameworks/esp-idf-v5.0.3/components/esp_hw_support/include/soc/esp32 -IC:/Espressif/frameworks/esp-idf-v5.0.3/components/esp_hw_support/port/esp32/. -IC:/Espressif/frameworks/esp-idf-v5.0.3/components/esp_hw_support/port/esp32/private_include -IC:/Espressif/frameworks/esp-idf-v5.0.3/components/heap/include -IC:/Espressif/frameworks/esp-idf-v5.0.3/components/log/include -IC:/Espressif/frameworks/esp-idf-v5.0.3/components/soc/include -IC:/Espressif/frameworks/esp-idf-v5.0.3/components/soc/esp32/. -IC:/Espressif/frameworks/esp-idf-v5.0.3/components/soc/esp32/include -IC:/Espressif/frameworks/esp-idf-v5.0.3/components/hal/esp32/include -IC:/Espressif/frameworks/esp-idf-v5.0.3/components/hal/include -IC:/Espressif/frameworks/esp-idf-v5.0.3/components/hal/platform_port/include -IC:/Espressif/frameworks/esp-idf-v5.0.3/components/esp_rom/include -IC:/Espressif/frameworks/esp-idf-v5.0.3/components/esp_rom/include/esp32 -IC:/Espressif/frameworks/esp-idf-v5.0.3/components/esp_rom/esp32 -IC:/Espressif/frameworks/esp-idf-v5.0.3/components/esp_common/include -IC:/Espressif/frameworks/esp-idf-v5.0.3/components/esp_system/include -IC:/Espressif/frameworks/esp-idf-v5.0.3/components/esp_system/port/soc -IC:/Espressif/frameworks/esp-idf-v5.0.3/components/esp_system/port/include/private -IC:/Espressif/frameworks/esp-idf-v5.0.3/components/xtensa/include -IC:/Espressif/frameworks/esp-idf-v5.0.3/components/xtensa/esp32/include -IC:/Espressif/frameworks/esp-idf-v5.0.3/components/lwip/include -IC:/Espressif/frameworks/esp-idf-v5.0.3/components/lwip/include/apps -IC:/Espressif/frameworks/esp-idf-v5.0.3/components/lwip/include/apps/sntp -IC:/Espressif/frameworks/esp-idf-v5.0.3/components/lwip/lwip/src/include -IC:/Espressif/frameworks/esp-idf-v5.0.3/components/lwip/port/esp32/include -IC:/Espressif/frameworks/esp-idf-v5.0.3/components/lwip/port/esp32/include/arch -IC:/Espressif/frameworks/esp-idf-v5.0.3/components/driver/include -IC:/Espressif/frameworks/esp-idf-v5.0.3/components/driver/deprecated -IC:/Espressif/frameworks/esp-idf-v5.0.3/components/driver/esp32/include -IC:/Espressif/frameworks/esp-idf-v5.0.3/components/esp_pm/include -IC:/Espressif/frameworks/esp-idf-v5.0.3/components/esp_ringbuf/include -IC:/Users/alok2/OneDrive/Desktop/IOT/Counting/Counting/components/ssd1306/src -mlongcalls -Wno-frame-address  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fmacro-prefix-map=C:/Users/alok2/OneDrive/Desktop/IOT/Counting/Counting=. -fmacro-prefix-map=C:/Espressif/frameworks/esp-idf-v5.0.3=/IDF -fstrict-volatile-bitfields -Wno-error=unused-but-set-variable -fno-jump-tables -fno-tree-switch-conversion -DconfigENABLE_FREERTOS_DEBUG_OCDAWARE=1 -std=gnu17 -Wno-old-style-declaration -D_GNU_SOURCE -DIDF_VER=\"v5.0.3-dirty\" -DESP_PLATFORM -D_POSIX_READER_WRITER_LOCKS -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj -MF esp-idf\main\CMakeFiles\__idf_main.dir\main.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj -c C:/Users/alok2/OneDrive/Desktop/IOT/Counting/Counting/main/main.c
C:/Users/alok2/OneDrive/Desktop/IOT/Counting/Counting/main/main.c: In function 'countup':
C:/Users/alok2/OneDrive/Desktop/IOT/Counting/Counting/main/main.c:31:25: error: 'buf' undeclared (first use in this function)
   31 |                 sprintf(buf, "%d", count);
      |                         ^~~
C:/Users/alok2/OneDrive/Desktop/IOT/Counting/Counting/main/main.c:31:25: note: each undeclared identifier is reported only once for each function it appears in
C:/Users/alok2/OneDrive/Desktop/IOT/Counting/Counting/main/main.c:32:45: warning: passing argument 3 of 'ssd1306_printFixedN' makes pointer from integer without a cast [-Wint-conversion]
   32 |                 ssd1306_printFixedN(0,  10, count, STYLE_NORMAL,2);
      |                                             ^~~~~
      |                                             |
      |                                             int
In file included from C:/Users/alok2/OneDrive/Desktop/IOT/Counting/Counting/components/ssd1306/src/ssd1306.h:33,
                 from C:/Users/alok2/OneDrive/Desktop/IOT/Counting/Counting/main/main.c:8:
C:/Users/alok2/OneDrive/Desktop/IOT/Counting/Counting/components/ssd1306/src/ssd1306_1bit.h:133:69: note: expected 'const char *' but argument is of type 'int'
  133 | uint8_t     ssd1306_printFixedN(uint8_t xpos, uint8_t y, const char ch[], EFontStyle style, uint8_t factor);
      |                                                          ~~~~~~~~~~~^~~~
ninja: build stopped: subcommand failed.
